--- a/package.json
+++ b/package.json
@@ -1,5 +1,27 @@
 {
-    "scripts": {
-        "test": "mocha"
-    }
+  "scripts": {
+    "test": "mocha",
+    "start": "node server.js"
+  },
+  "name": "webifyit",
+  "description": "hello world",
+  "version": "1.0.0",
+  "main": "server.js",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/CaffGeek/webifyit.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/CaffGeek/webifyit/issues"
+  },
+  "homepage": "https://github.com/CaffGeek/webifyit",
+  "dependencies": {
+    "chai": "^3.2.0",
+    "mocha": "^2.3.2"
+  }
 }
