--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   },
   "homepage": "https://github.com/CaffGeek/webifyit",
   "dependencies": {
+    "browserify": "^11.1.0",
     "chai": "^3.2.0",
+    "literalify": "^0.4.0",
     "mocha": "^2.3.2",
+    "react": "^0.14.0-rc1",
+    "react-dom": "^0.14.0-rc1",
     "request": "^2.61.0"
   }
 }
